fix landmark off centre issue

--- a/app/assets/stylesheets/admin/map_picker.sass
+++ b/app/assets/stylesheets/admin/map_picker.sass
@@ -11,7 +11,7 @@
   text-align: center
   vertical-align: middle
   margin-left: -41px
-  margin-top: -55px
+  margin-top: -45px
   font-weight: 400
 
 #map .centerMarker:after
